# parse_logs_python

./: .gitignore  LICENSE  README.md  requirements.txt  setup.cfg
log_parser/: log_parser.py
src/log_parser/: log_parser.py
tests/: test_datetime_operations.py  test_input.txt  test_parse_log.py
