[metadata]
name = parse-logs-el-miqdam
version = 0.0.1
author = Hamza Elmiqdam
author_email = elmiqdam@gmail.com
description = Parse logs and calculate the average run time of a set of operations
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/hamza-el-miqdam/parse_logs_python
project_urls =
    Bug Tracker = https://github.com/hamza-el-miqdam/parse_logs_python/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
